Added more functions

--- a/BuildTool/App.config
+++ b/BuildTool/App.config
@@ -50,9 +50,6 @@
       <setting name="BuildComand" serializeAs="String">
           <value>npm run build</value>
       </setting>
-      <setting name="BuildNoDocComand" serializeAs="String">
-          <value>npm run build-no-doc</value>
-      </setting>
       <setting name="CmdPath" serializeAs="String">
           <value>C:/Users/kuzminv-s/AppData/Local/Programs/Git/git-cmd.exe</value>
       </setting>
@@ -70,6 +67,36 @@
       </setting>
       <setting name="WindowWidth" serializeAs="String">
           <value>100</value>
+      </setting>
+      <setting name="CICleanComand" serializeAs="String">
+          <value>CI-Clean</value>
+      </setting>
+      <setting name="CIPublishFoundationComand" serializeAs="String">
+          <value>Publish-Foundation-Projects</value>
+      </setting>
+      <setting name="CIPublishFeatureComand" serializeAs="String">
+          <value>Publish-Feature-Projects</value>
+      </setting>
+      <setting name="CIPublishProjectComand" serializeAs="String">
+          <value>Publish-Project-Projects</value>
+      </setting>
+      <setting name="CICommandBase" serializeAs="String">
+          <value>gulp {0} --gulpfile gulpfile-ci.js</value>
+      </setting>
+      <setting name="CIDevComand" serializeAs="String">
+          <value>CI-And-Prepare-Files-DEV</value>
+      </setting>
+      <setting name="CIUatComand" serializeAs="String">
+          <value>CI-And-Prepare-Files-UAT</value>
+      </setting>
+      <setting name="CIProdComand" serializeAs="String">
+          <value>CI-And-Prepare-Files-PROD</value>
+      </setting>
+      <setting name="SrcMainFolders" serializeAs="String">
+          <value>Feature, Foundation, Project</value>
+      </setting>
+      <setting name="PublishProjectCommand" serializeAs="String">
+          <value>gulp Publish-Project -m {0}</value>
       </setting>
   </BuildTool.Properties.Settings>
     </userSettings>
