--- a/BuildTool/App.config
+++ b/BuildTool/App.config
@@ -14,7 +14,7 @@
     <applicationSettings>
 		<BuildTool.Properties.Settings>
       <setting name="RepoLocation" serializeAs="String">
-          <value>C:\Dev\</value>
+          <value>C:\Dev\Repos\</value>
       </setting>
   </BuildTool.Properties.Settings>
     </applicationSettings>
@@ -45,7 +45,7 @@
           <value>gulp 05-Sync-Unicorn</value>
       </setting>
       <setting name="GitBashPath" serializeAs="String">
-          <value>C:/Users/kuzminv-s/AppData/Local/Programs/Git/git-cmd.exe</value>
+          <value>C:\Program Files\Git\git-cmd.exe</value>
       </setting>
       <setting name="BuildComand" serializeAs="String">
           <value>npm run build</value>
@@ -54,7 +54,7 @@
           <value>npm run build-no-doc</value>
       </setting>
       <setting name="CmdPath" serializeAs="String">
-          <value>C:/Users/kuzminv-s/AppData/Local/Programs/Git/git-cmd.exe</value>
+          <value>C:\Program Files\Git\git-cmd.exe</value>
       </setting>
       <setting name="WindowTop" serializeAs="String">
           <value>100</value>
