Build JSX development command

--- a/BuildTool/App.config
+++ b/BuildTool/App.config
@@ -50,6 +50,9 @@
       <setting name="BuildComand" serializeAs="String">
           <value>npm run build</value>
       </setting>
+      <setting name="BuildDebugCommand" serializeAs="String">
+          <value>npm run build-debug</value>
+      </setting>
       <setting name="CmdPath" serializeAs="String">
           <value>C:\Program Files\Git\git-cmd.exe</value>
       </setting>
