Production and Debug modes for JSX build

--- a/BuildTool/App.config
+++ b/BuildTool/App.config
@@ -47,7 +47,7 @@
       <setting name="GitBashPath" serializeAs="String">
           <value>C:\Program Files\Git\git-cmd.exe</value>
       </setting>
-      <setting name="BuildComand" serializeAs="String">
+      <setting name="BuildCommand" serializeAs="String">
           <value>npm run build</value>
       </setting>
       <setting name="BuildDebugCommand" serializeAs="String">
